@@ -1,5 +1,9 @@
 [B]Advanced Emulator Launcher | version 0.9.2 | xx March 2017[/B]
 
+FEATURE  Ability to sort cataloged filters by number of machines.
+
+
+
 WIP      Scan Software Lists.
 
 WIP      Launch machines with software lists.
